--- a/websitebody.html
+++ b/websitebody.html
@@ -236,7 +236,7 @@
 
 
     <header>
-        </h1 style="font-size:10vw">School of Mount St. Mary, Inc.</h1> 
+        </h1>School of Mount St. Mary, Inc.</h1> 
        <div class="front-gate"> 
            <img src="img/fronts.png" alt="gate of smsm cartoon" class="img-fronts">
            <img src="img/stemgirls1.PNG" class="rickroll1">
@@ -254,16 +254,16 @@
     </nav>
 
     <section>
-        <h2 class="text-center" style="font-size:3vw;">The MAGNIFICAT Student Portal</h2>
-        <p class="text-center" style="font-size:2vw">Explore the world of education with us.</p>
+        <h2 class="text-center" style="font-size:250%;">The MAGNIFICAT Student Portal</h2>
+        <p class="text-center" style="font-size:150%">Explore the world of education with us.</p>
     </section>
 
     <section id="home">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <h2 style="font-size:3vw;">Home Section</h2>
-                    <p style="font-size:1.7vw;">School of Mount St. Mary, Inc. features academically empowered learners, exceptionally well-trained teachers, well-mannered faculty staffs and non-staffs.</p>
+                    <h2 style="font-size:200%;">Home Section</h2>
+                    <p style="font-size:100%;">School of Mount St. Mary, Inc. features academically empowered learners, exceptionally well-trained teachers, well-mannered faculty staffs and non-staffs.</p>
                     <button onclick="toggleWidget()" class="btn btn-primary" style="font-size: 2vw;">Explore Features</button>
                  </div>
                  <meta charset="UTF-8">
@@ -278,8 +278,8 @@
                  </div>
             </div>
             <div class="widget" id="homeWidget">
-                <h3 style="font-size: 2vw;">Additional Features</h3>
-                <p stlye="font-size: 1vw">Discover more about our home section. We offer personalized learning, interactive courses, and much more.</p>
+                <h3 style="font-size: 200%;">Additional Features</h3>
+                <p stlye="font-size: 100%">Discover more about our home section. We offer personalized learning, interactive courses, and much more.</p>
             </div>
         </div>
     </section>
@@ -291,8 +291,8 @@
                     <img src="img/one.jpg" alt="smsm building" class="one">
                 </div>
                 <div class="col-md-6">
-                    <h2 style="font-size: 3vw;">About Section</h2>
-                     <p style="font-size: 1.7vw;"> It offers Preschool, Grade School, Junior High School, and Senior High School with academic strands such as Science Technology and Engineering (STEM), Accountancy Business Management (ABM), General Academic Strand (GAS), and Humanities and Social Sciences (HUMSS).</p>
+                    <h2 style="font-size: 200%;">About Section</h2>
+                     <p style="font-size: 100%;"> It offers Preschool, Grade School, Junior High School, and Senior High School with academic strands such as Science Technology and Engineering (STEM), Accountancy Business Management (ABM), General Academic Strand (GAS), and Humanities and Social Sciences (HUMSS).</p>
                 </div>
             </div>
         </div>
@@ -302,8 +302,8 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <h2 style="font-size: 3vw;">Contact Section</h2>
-                    <p style="font-size: 1.7vw;">Get in touch with us. We value your feedback. Fill out the form below to reach out.</p>
+                    <h2 style="font-size: 200%;">Contact Section</h2>
+                    <p style="font-size: 100%;">Get in touch with us. We value your feedback. Fill out the form below to reach out.</p>
                     <form onsubmit="return validateForm()">
                         <div class="form-group">
                             <label for="email">Email:</label>
@@ -334,18 +334,18 @@
             <div class="row">
                 <div class="col-md-4 feature">
                     <i class="fas fa-book"></i>
-                    <h3>School Mission</h3>
-                    <p>To continue providing quality education to the youth for the maximum development of their potentials, values, and attitudes by creating a supportive environment that enables them to meet challenges leading to their growth as Christians, human beings, Filipinos and learners.</p>
+                    <h3 style="font-size: 100%;">School Mission</h3>
+                    <p style="font-size: 75%;">To continue providing quality education to the youth for the maximum development of their potentials, values, and attitudes by creating a supportive environment that enables them to meet challenges leading to their growth as Christians, human beings, Filipinos and learners.</p>
                 </div>
                 <div class="col-md-4 feature">
                     <i class="fas fa-chalkboard-teacher"></i>
-                    <h3>School Theme</h3>
-                    <p>Promoting a peaceful, caring, and safe environment to produce academically empowered learners.</p>
+                    <h3 style="font-size: 100%;">School Theme</h3>
+                    <p style="font-size: 75%;">Promoting a peaceful, caring, and safe environment to produce academically empowered learners.</p>
                 </div>
                 <div class="col-md-4 feature">
                     <i class="fas fa-graduation-cap"></i>
-                    <h3>School Vision</h3>
-                    <p>The School of Mount St. Mary is a private co-educational institution that provides the development of students who love and serve God, who are prepared to excel in complex, interconnected changing world, ecologically supportive, and responsible for their community and nation.</p>
+                    <h3 style="font-size: 100%;">School Vision</h3>
+                    <p style="font-size: 75%;">The School of Mount St. Mary is a private co-educational institution that provides the development of students who love and serve God, who are prepared to excel in complex, interconnected changing world, ecologically supportive, and responsible for their community and nation.</p>
                 </div>
             </div>
         </div>
