--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         // Simple validation (replace this with your authentication logic)
         if (username === 'magnificat@student' && password === 'password2') {
             alert('Login successful!');
-            window.location.href = 'https://magnificat2024.github.io/magnificat/websitebody.html'; // Redirect to home screen
+            window.location.href = 'https://magnificat2024.github.io/magnificat/websitebody.html' // Redirect to home screen
         } else {
             alert('Invalid username or password. Please try again.');
         }
