--- a/admin-login.html
+++ b/admin-login.html
@@ -110,10 +110,10 @@
  
     <section class="Welcome">
     <h1 style="font-size: 300%;">Welcome Magnificat Admin </h1>
-     <p style="font-size: 100%;"> If you're not an admin please go back to the <a href="index.html">Home page</a></p>
+     <p style="font-size: 100%;"> If you're not an admin please go back to the <a href="/website/index2.html" style="color: rgb(0, 225, 255);" >School Login</a></p>
     </section>
 <div id="login-container">
-    <h2>Please Log In</h2>
+    <h2>Please Login your Admin details.</h2>
     <form id="login-form" onsubmit="return loginUser()">
         <label for="username">Username:</label>
         <input type="text" id="username" required>
