--- a/dashboardtest.html
+++ b/dashboardtest.html
@@ -6,87 +6,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance Management Dashboard</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <style>
         /* styles.css */
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
             padding: 0;
+            margin: 0;
+            background-color: #f8f9fa;
+            color: #383a3b;
+            font-family: 'Playfair Display', serif;
+            height: 100vh;
+            background-image: url('img/background4.png'); /* Background image */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
-
         header {
-            background-color: #333;
+            background-color: #0a0a4e;
             color: #fff;
             text-align: center;
             padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
         }
-
         nav {
-            background-color: #444;
+            background-color: #0a0a4e;
             color: #fff;
             text-align: center;
-            width: 200px; 
-            float: left; 
-            height: 100vh; 
-            overflow-y: auto; /* Added scrolling for navigation */
+            width: 200px;
+            position: fixed;
+            height: 100vh;
+            overflow-y: auto;
         }
-
         nav ul {
             list-style-type: none;
             padding: 0;
         }
-
         nav ul li {
             margin: 0;
             padding: 10px;
         }
-
         a {
             text-decoration: none;
             color: #fff;
         }
-
         .main-content {
-            margin: 20px;
-            margin-left: 220px; 
-            display: grid; /* Added for grid layout */
-            grid-template-columns: repeat(2, 1fr); /* Two columns */
-            grid-gap: 20px; /* Gap between grid items */
-            overflow-y: auto; /* Added scrolling for content */
-            max-height: calc(100vh - 40px); /* Adjusted to fit within viewport */
+            padding-top: 60px; /* Height of fixed header */
+            padding-left: 220px; /* Width of fixed sidebar */
+            padding-right: 20px; /* Adjusted padding */
+            padding-bottom: 20px; /* Adjusted padding */
+            display: flex;
+            flex-wrap: wrap;
+            height: calc(100vh - 60px); /* Adjusted height */
         }
-
         .section {
-            background-color: #f4f4f4;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            width: 100%; /* Take full width of grid cell */
+            background-color: #ffffffab;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-right: 20px;
+            margin-bottom: 20px;
+            flex-grow: 1;
+            flex-basis: calc(33.33% - 200px); /* Adjusted width */
+            max-height: calc(100vh - 270px);
         }
-
-        .total-students-window {
-            background-color: #f4f4f4;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            text-align: center;
-            margin: 20px auto; /* Centered horizontally */
-            width: 300px;
+        .section:nth-child(3) {
+            flex-basis: calc(100% - 200px); /* Adjusted width */
         }
-
-        .footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            clear: both; 
-            position: fixed; 
-            bottom: 0; 
-            width: 100%; 
+        .section h2 {
+            margin-top: 0;
         }
-
         .action-button {
-            background-color: #4CAF50; 
+            background-color: #4CAF50;
             border: none;
             color: white;
             padding: 15px 32px;
@@ -94,109 +89,117 @@
             text-decoration: none;
             display: inline-block;
             font-size: 16px;
-            margin: 4px 2px;
+            margin: 10px 0;
             cursor: pointer;
             border-radius: 5px;
+            transition: background-color 0.3s ease;
         }
-
-        .action-button:hover {
-            background-color: #45a049; 
-        }
-
-        /* Bar graph styles */
         .bar-graph {
-            height: 30px;
-            background-color: #ddd;
-            border-radius: 5px;
-            margin-top: 10px;
-            width: 100%;
-            position: relative;
+            height: 300px;
+            border-radius: 10px;
+            overflow: hidden;
         }
-
-        .bar {
-            height: 100%;
-            border-radius: 5px;
-            position: absolute;
-            top: 0;
-            left: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-weight: bold;
+        @media only screen and (max-width: 768px) {
+            nav {
+                width: 0;
+            }
+            .main-content {
+                padding-left: 0;
+                padding-top: 60px;
+            }
         }
-
-        .present-bar {
-            background-color: #4CAF50;
+        .space{
+             padding: 1px;
         }
-
-        .absent-bar {
-            background-color: #F44336;
-        }
-        
     </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to the Attendance Management Dashboard</h1>
-    </header>
-    <nav>
-      <ul>
-          <li><a href="dashboardtest.html">Dashboard</a></li>
-          <li><a href="students.html">Students</a></li>
-          <li><a href="Attendance-records.html">Attendance Records</a></li>
-          <li><a href="#">Settings</a></li>
-          <!-- Add more navigation items if needed -->
-      </ul>
-  </nav>
-    <section class="main-content">
-        <div class="section attendance-summary">
-            <h2>Today's Attendance Overview</h2>
-            <p>Total Students: <span id="total-students">100</span></p>
-            <p>Present: <span id="present-students">85</span></p>
-            <p>Absent: <span id="absent-students">15</span></p>
-            <button class="action-button">Export Data</button>
-        </div>
-        <div class="section attendance-list">
-            <h2>Attendance List</h2>
-            <ul>
-                <li>Student 1 - Present</li>
-                <li>Student 2 - Absent</li>
-                <!-- Add more list items dynamically with JavaScript -->
-            </ul>
-            <button class="action-button">Take Attendance</button>
-        </div>
-        <div class="total-students-window">
-            <h2>Total Students</h2>
-            <p><span id="total-students-window-count">100</span></p>
-            <div class="bar-graph" id="barGraph">
-                <div class="bar present-bar" id="presentBar">85</div>
-                <div class="bar absent-bar" id="absentBar">15</div>
-            </div>
-        </div>
-    </section>
-    <script>
-        // Example JavaScript for updating attendance data
-        // You can replace this with actual dynamic data from your server
-        const totalStudents = 100; // Example value
-        const presentStudents = 85; // Example value
-        const absentStudents = 15; // Example value
-        
-        document.getElementById('total-students').innerText = totalStudents;
-        document.getElementById('present-students').innerText = presentStudents;
-        document.getElementById('absent-students').innerText = absentStudents;
+<header>
+    <h1>Attendance Management Dashboard</h1>
+</header>
+<nav>
+    <ul>
+        <li><a></a></li><br>
+        <li><a></a></li><br>
+        <li><a href="/website/dashboardtest.html">Dashboard</a></li>
+        <li><a href="/website/Attendance-records.html">Attendance Records</a></li>
+        <li><a href="http://localhost/website/qr-code-attendance-system/">Qr Code Scanner</a></li>
+        <li><a href="http://localhost/website/website.php">Logout</a></li>
+    </ul>
+</nav>
+<div class="space">
+    <h2>space</h2>
+</div>
 
-        // Update total students in the separate window
-        document.getElementById('total-students-window-count').innerText = totalStudents;
+<div class="main-content">
+    <div class="section attendance-summary">
+        <h2>Today's Attendance Overview</h2>
+        <p>Total Students: <span id="total-students">31</span></p>
+        <p>Present: <span id="present-students">30</span></p>
+        <p>Absent: <span id="absent-students">1</span></p>
+    </div>
+    <div class="section attendance-list" style="overflow-y: auto;">
+        <h2>Student List</h2>
+        <ul>
+            <li> Neal Aaron Alvarez </li>
+            <li> Ronne Harlie Balonso </li>
+            <li> Marc Angelo Bongar </li>
+            <li> Rylee Alyxiz Cardiño </li>
+            <li> Mark Anthony Domingo </li>
+            <li> Jhann Henrie Dueñas </li>
+            <li> Kevin Gabriel Gonzales  </li>
+            <li> Adrian Rafael Inocando </li>
+            <li> Gabriel Miguel Magtalas </li>
+            <li> Venise Rodge Maniego </li>
+            <li> Kenneth Mariano </li>
+            <li> John Flovd Arvey Navarro </li>
+            <li> Renz Moisés Natividad </li>
+            <li> Carl Loren Pahayahay </li>
+            <li> Harvey Pengson </li>
+            <li> Jose Miguel Samson </li>
+            <li> Tristan Patrick San Roque </li>
+            <li> Ralph Tristan Santos </li>
+            <li> John Leigh Ric Vinoya </li>
+            <li> Carl Gabriel Vitalista </li>
+            <li> Jociel Abellana </li>
+            <li> Micah Daniela Cayetano </li>
+            <li> Reina Trishia Cuestas </li>
+            <li> Shemiah Pearl Cuestas </li>
+            <li> Khryztine Angela Leoncio </li>
+            <li> Francine Martinez </li>
+            <li> Nicole Masadao </li>
+            <li> Nicole Peñalosa </li>
+            <li> Arisa Sakakibara </li>
+            <li> Charlotte Theseira Theseira </li>
+            <li> Angela Jade Yasis </li>
+        </ul>
+    </div>
+    <div class="section bar-graph-container"style="overflow-y: auto;">
+        <h2>Attendance Overview Graph</h2>
+        <div id="myChart" class="bar-graph"></div>
+    </div>
+</div>
 
-        // Create and style bar elements based on student data
-        const presentBar = document.getElementById('presentBar');
-        presentBar.style.width = (presentStudents / totalStudents) * 100 + '%';
-        presentBar.innerText = presentStudents;
+<script>
+    google.charts.load('current', {'packages': ['corechart']});
+    google.charts.setOnLoadCallback(drawChart);
 
-        const absentBar = document.getElementById('absentBar');
-        absentBar.style.width = (absentStudents / totalStudents) * 100 + '%';
-        absentBar.innerText = absentStudents;
-    </script>
+    function drawChart() {
+        const data = google.visualization.arrayToDataTable([
+            ['Attendance Status', 'Count'],
+            ['Present', 30],
+            ['Absent', 1]
+        ]);
+
+        const options = {
+            title: 'Attendance Overview',
+            colors: ['#4CAF50', '#F44336']
+        };
+
+        const chart = new google.visualization.BarChart(document.getElementById('myChart'));
+        chart.draw(data, options);
+    }
+</script>
 </body>
 </html>
+
