--- a/Attendance-records.html
+++ b/Attendance-records.html
@@ -114,11 +114,11 @@
 <nav>
     <ul>
       <li><a></a></li><br>
-      <li><a></a></li><br>
-      <li><a href="/website/dashboardtest.html">Dashboard</a></li>
-      <li><a href="/website/Attendance-records.html">Attendance Records</a></li>
-      <li><a href="http://localhost/website/qr-code-attendance-system/">Qr Code Scanner</a></li>
-      <li><a href="http://localhost/website/website.php">Logout</a></li>
+        <li><a></a></li><br>
+        <li><a href="dashboardtest.html">Dashboard</a></li>
+        <li><a href="Attendance-records.html">Attendance Records</a></li>
+        <li><a href="index.php">Qr Code Scanner</a></li>
+        <li><a href="websitebody.php">Logout</a></li>
     </ul>
   </nav>
  <div class="space">
