--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </header>
  <section class="Welcome">
     <h1>Welcome to the MAGNIFICAT Student Portal!</h1>
-    <p>If you are an admin, please <a href="/website/admin-login.html" style="color: rgb(5, 222, 247);">click here</a></p>
+    <p>If you are an admin, please <a href="admin-login.html" style="color: rgb(5, 222, 247);">click here</a></p>
 </section>
 <div id="login-container">
     <h2>Please Log In</h2>
@@ -138,7 +138,7 @@
         // Simple validation (replace this with your authentication logic)
         if (username === 'magnificat@student' && password === 'password2') {
             alert('Login successful!');
-            window.location.href = 'http://localhost/website/website.php' // Redirect to home screen
+            window.location.href = 'websitebody.php' // Redirect to home screen
         } else {
             alert('Invalid username or password. Please try again.');
         }
