--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         // Simple validation (replace this with your authentication logic)
         if (username === 'magnificat@student' && password === 'password2') {
             alert('Login successful!');
-            window.location.href = 'websitebody.php' // Redirect to home screen
+            window.location.href = './websitebody.php' // Redirect to home screen
         } else {
             alert('Invalid username or password. Please try again.');
         }
